--- a/package.xml
+++ b/package.xml
@@ -16,11 +16,11 @@ dumps all the opcodes (execution units) of a script.
   <email>derick@xdebug.org</email>
   <active>yes</active>
  </lead>
- <date>2025-07-01</date>
- <time>16:35:27</time>
+ <date>2025-07-15</date>
+ <time>15:22:33</time>
  <version>
-  <release>0.19.0</release>
-  <api>0.19.0</api>
+  <release>0.19.1</release>
+  <api>0.19.1</api>
  </version>
  <stability>
   <release>beta</release>
@@ -28,7 +28,10 @@ dumps all the opcodes (execution units) of a script.
  </stability>
  <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD style</license>
  <notes>
-- Add support for PHP 8.3 and PHP 8.4
+- Remove 'ZEND_' prefix from opcode names
+- PHP 8.5: Add support for the new DECLARE_ATTRIBUTED_CONST opcode
+- Improve support for PHP 8.4 property hooks, and add the new INIT_PARENT_PROPERTY_HOOK_CALL opcode
+- Fixed EXT_STMT display, as it does not have any used op nodes
  </notes>
  <contents>
   <dir name="/">
