--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
     "editor.formatOnSave": false,
+    "files.associations": {
+      "*.erd": "json",
+      "*.vuerd": "json",
+      "minhook.h": "c"
+    },
 }
